syntax = "proto3";

option csharp_namespace = "ValidationServers.Phone";

package phone;

message ResultReply {
  bool result=1;
  string info=2;
}

message ValidationPhoneRequest {
  string name = 1;
}
message ValidationPhoneReply {
  string message = 1;
}

service ValidationPhone {
  rpc ValidatePhone(ValidationPhoneRequest) returns(ValidationPhoneReply);
}
